Resolve 1440px Dashboard Layout conflict
When browser is exactly 1440px, unnecessary top margin added to first
right column, resulting in uneven column alignment. Positioning of right
column is also dependent on min-width 1440px in another location.
Changing to 1439px here resolves the conflict.

--- a/MediaBrowser.WebDashboard/dashboard-ui/css/site.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/site.css
@@ -786,7 +786,7 @@ progress {
     color: green;
 }
 
-@media all and (max-width: 1440px) {
+@media all and (max-width: 1439px) {
 
     .dashboardHomeRightColumn {
         margin-top: 1em;
